<resources>
    <string name="app_name">Coinflipt</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_tradelist">Trade</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_friendlist">Friends</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_mail">Mail</string>
    <string name="menu_block">Block</string>
    <string name="menu_quest">Quest</string>
    <string name="menu_post">Post</string>
    <string name="menu_trade">Trade</string>

    <string name="btn_accept">Accept</string>

    <string name="title_slide_1">Private Data We Receive And Collect</string>
    <string name="description_slide_1">"Evolo also automatically collects and receives certain information from your computer or mobile device, including the activities you perform on our Website, the Platforms, and the Applications, the type of hardware and software you are using (for example, your operating system or browser), and information obtained from cookies. For example, each time you visit the Website or otherwise use the Services, we automatically collect your IP address, browser and device type, access times, the web page from which you came, the regions from which you navigate the web page, and the web page(s) you access (as applicable).  "</string>
    <string name="title_slide_2">How We Use Evolo Landing Page Data</string>
    <string name="description_slide_2">Evolo SaaS Landing Page Template uses visitors\' data for the following general purposes:\n\n
        1: To identify you when you login to your account \n
        2: To enable us to operate the Services and provide them to you \n
        3: To verify your transactions and for purchase confirmation, billing, security, and authentication (including security tokens for communication with installed)\n
        4: To analyze the Website or the other Services and information about our visitors and users, including research into our user demographics and user behaviour in order to improve our content and Services\n
        5: To contact you about your account and provide customer service support, including responding to your comments and questions\n
        6: To share aggregate (non-identifiable) statistics about users of the Services to prospective advertisers and partners\n
        7: To keep you informed about the Services, features, surveys, newsletters, offers, surveys, newsletters, offers, contests and events we think you may find useful or which you have requested from us\n
        8: To sell or market Evolo Landing Page products and services to you\n
        9: To better understand your needs and the needs of users in the aggregate, diagnose problems, analyze trends, improve the features and usability of the Services, and better understand and market to our customers and users\n
        10: To keep the Services safe and secure\n
        11: We also use non-identifiable information gathered for statistical purposes to keep track of the number of visits to the Services with a view to introducing improvements and improving usability of the Services. We may share this type of statistical data so that our partners also understand how often people use the Services, so that they, too, may provide you with an optimal experience.</string>
    <string name="title_slide_3">Customer Content We Process For Customers</string>
    <string name="description_slide_3">Evolo is a HTML landing page template tool. By its nature, Services enable our customers to promote their products and services integrate with hundreds of business applications that they already use, all in one place.  \n\n\n Services help our customers promote their products and services, marketing and advertising; engaging audiences; scheduling and publishing messages; and analyze the results.</string>
    <string name="title_slide_4">Consent Of Using Evolo Landing Page</string>
    <string name="description_slide_4">By using any of the Services, or submitting or collecting any Personal Information via the Services, you consent to the collection, transfer, storage disclosure, and use of your Personal Information in the manner set out in this Privacy Policy. If you do not consent to the use of your Personal Information in these ways, please stop using the Services.</string>
    <string name="title_slide_5">Inquire What Data We Have</string>
    <string name="description_slide_5">Evolo Landing Page uses tracking technology on the landing page, in the Applications, and in the Platforms, including mobile application identifiers and a unique Evolo user ID to help us recognize you across different Services, to monitor usage and web traffic routing for the Services, and to customize and improve the Services.  \n\n\n By visiting Evolo or using the Services you agree to the use of cookies in your browser and HTML-based emails. Cookies are small text files placed on your device when you visit a Cookies are small text files placed on your device when you visit a Cookies are small text files placed on your device when web site in order to track.</string>
    <string name="progress_sign_up">Signning up</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_logout">Exit</string>
    <string name="wanning_are_you_sure_you_want_to_logout">Are you sure to exit app?</string>

    <string name="loginFacebookButton">Facebook</string>


</resources>
