<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_tradelist"
        android:icon="@drawable/ico_menu_trade"
        android:title="@string/menu_tradelist" />

    <item
        android:id="@+id/menu_invite"
        android:icon="@drawable/ico_menu_invite"
        android:title="@string/menu_invite" />

    <item
        android:id="@+id/menu_friendlist"
        android:icon="@drawable/ico_menu_friend"
        android:title="@string/menu_friendlist" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ico_menu_setting"
        android:title="@string/menu_setting" />

    <item
        android:id="@+id/menu_mail"
        android:icon="@android:drawable/sym_action_email"
        android:title="@string/menu_mail" />

</menu>
